cleaned up files

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,3 +9,12 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+li {
+  list-style: hidden;
+  padding: 30px 0;
+}
+
+.img-thumbnail {
+  width: 400px;
+}
